# codecov-demo

./: .gitignore  pyproject.toml
api/: app.py  requirements.txt
