[project]
authors = [{name = "Jose Nimo", email = "nimojose@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "codecov-demo"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
codecov_demo = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
flask = ">=3.1.0,<4"
pytest-cov = ">=6.0.0,<7"
pip = ">=24.3.1,<25"
